Changed response codes to be more descriptive.
Added a FilesystemServlet that parses the path of the file to be added/edited/deleted from the path of the request instead of the body.

Added UpdateNotebookEndpoint

Removed starting and stopping of servers from Endpoint tests, as they should be testing the Endpoint, not the server.